--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body style="background: url(img/bg.jpg);">
   <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img class="nav-icon" src="img/nav-icon.png" alt="">MyTodo</a>
